# behavior-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh.md  characters  cmini-wrapper  pyproject.toml
agentic_mindset/: __init__.py  cli.py  context.py  fusion.py  pack.py  registry.py
agentic_mindset/compiler/: __init__.py  compile.py  extraction.py  llm.py  mapper.py  normalization.py  pack_builder.py  schemas.py  typer.py
agentic_mindset/ir/: conditions.py  models.py
agentic_mindset/renderer/: inject.py
agentic_mindset/resolver/: policies.py  resolver.py
agentic_mindset/schema/: __init__.py  behavior.py  meta.py  mindset.py  personality.py  sources.py  version.py  voice.py
characters/achilles/: personality.yaml  voice.yaml
characters/ainz-ooal-gown/: sources.yaml
characters/aristotle/: meta.yaml  mindset.yaml
characters/athena/: behavior.yaml  meta.yaml  voice.yaml
characters/l/: meta.yaml  (+2 more)
docs/: benchmark-spec.md  compiler-benchmark-schema.md  compiler-correction-taxonomy.md  compiler-v0-spec.md  compiler-validation.md  demo.md  golden-pack-benchmark.md  launch-post.md  schema-reference.md
examples/: sun-tzu-aurelius.yaml
prompts/: extract-v1.md
tests/: conftest.py  test_all_chars_sanity.py  test_benchmark_assertions.py  test_cli.py  test_compiler_compile.py  test_compiler_extraction.py  test_compiler_llm.py  test_compiler_mapper.py  test_compiler_normalization.py  test_compiler_pack_builder.py  test_compiler_typer.py  test_conditions.py  test_context.py  test_fusion.py  test_golden_packs.py  test_ir.py  test_pack.py  test_registry.py  test_renderer.py  test_resolver.py  test_schema_behavior.py  test_schema_meta.py  test_schema_mindset.py  test_schema_personality.py  test_schema_sources.py  test_schema_version.py  test_schema_voice.py
(+491 files in other folders)
